k8s/apps/gitlab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: gitlab
