k8s/apps/gitlab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
  annotations:
    cert-manager.io/cluster-issuer: "cert-manager-webhook-duckdns-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - gitlab.zeb17-int.duckdns.org
      secretName: gitlab-cert
  rules:
    - host: gitlab.zeb17-int.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab
                port:
                  number: 80
